force-app/main/default/objects/Public_Holiday__c/Public_Holiday__c.object-meta.xml
<CustomObject>
    <description>Contains current holiday count for each month for a specific fiscal year and state</description>
    <label>Public Holiday</label>
    <nameField>
        <displayFormat>PH-{0000}</displayFormat>
        <label>Public Holiday Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Public Holidays</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>