force-app/main/default/objects/Public_Holiday__c/fields/April__c.field-meta.xml
<CustomField>
    <fullName>April__c</fullName>
    <label>April</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>