force-app/main/default/objects/Public_Holiday__c/fields/Q2_Holiday__c.field-meta.xml
<CustomField>
    <fullName>Q2_Holiday__c</fullName>
    <formula>October__c + November__c + December__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q2 Public Holiday</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>