force-app/main/default/objects/Public_Holiday__c/listViews/Public_Holidays.listView-meta.xml
<ListView>
    <fullName>Public_Holidays</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Public_Holiday_Name__c</columns>
    <columns>Fiscal_Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>Public Holidays</label>
    <language>en_US</language>
    <sharedTo>
        <group>Sales_Reporting</group>
    </sharedTo>
</ListView>