force-app/main/default/objects/Public_Holiday__c/listViews/Public_Holidays_2023.listView-meta.xml
<ListView>
    <fullName>Public_Holidays_2023</fullName>
    <columns>NAME</columns>
    <columns>State__c</columns>
    <columns>July__c</columns>
    <columns>August__c</columns>
    <columns>September__c</columns>
    <columns>October__c</columns>
    <columns>November__c</columns>
    <columns>December__c</columns>
    <columns>January__c</columns>
    <columns>February__c</columns>
    <columns>March__c</columns>
    <columns>April__c</columns>
    <columns>May__c</columns>
    <columns>June__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fiscal_Year__c</field>
        <operation>equals</operation>
        <value>2023</value>
    </filters>
    <label>Public Holidays 2023</label>
    <language>en_US</language>
    <sharedTo>
        <group>Sales_Reporting</group>
    </sharedTo>
</ListView>